--- a/docs/UserGuide.adoc
+++ b/docs/UserGuide.adoc
@@ -36,6 +36,8 @@ To begin, let's download some comma-separated value (.csv) files with dummy data
 
 Click <<Importing existing availabilities `import`, this link>> to download and import a .csv file of availabilities into Scheduler!
 
+// tag::quickstart_add[]
+
 === Manually add interviewees and interviewers
 Forgot to include some data before importing? No problem!
 
@@ -92,6 +94,9 @@ image::quickstart/4_excel.png[width="500", align="left"]
 
 image::quickstart/5_excel.png[width="500", align="left"]
 
+NOTE: Solution and images referenced from https://knowledgebase.constantcontact.com
+
+// end::quickstart_add[]
 
 == User Preferences
 Scheduler is initialised with default user preferences.
@@ -240,221 +245,6 @@ Constraints:
 * Timeslots must obey the allowed values that are specified in the <<User Preferences, User Preferences>>.
 * Duplicate entries of the same interviewee cannot be presented in the CSV file to be imported.
 
-// tag::add[]
-
-=== Add interviewees/interviewers manually `add`
-Manually add a new entity to the database. The command format differs on the `r/ROLE` prefix supplied:
-
-* If `interviewee` is supplied, refer to <<Adding a new interviewee, Adding a new interviewee>> below.
-* If `interviewer` is supplied, refer to <<Adding a new interviewer, Adding a new interviewer>> below.
-
-==== Adding a new interviewee
-Manually add a new interviewee to the database.
-
-Format: `add r/interviewee n/NAME p/PHONE f/FACULTY y/YEAR_OF_STUDY ep/PERSONAL_EMAIL ew/NUS_WORK_EMAIL d/DEPARTMENT... s/SLOT... [t/TAG]...`
-
-Example:
-
- add r/interviewee n/John Doe p/88888888 t/CAP5 t/dogLover f/School of Computing ep/JohnDoe@gmail.com ew/JohnDoe@u.nus.edu y/2018 d/Marketing s/20/09/2019 18:00-18:30
-
-
-====
-Constraints:
-
-* A `n/NAME` must only contain alphanumeric characters and spaces, and should not be blank.
-* A `p/PHONE` must only contain numbers, and should be at least 3 digits long.
-* A `f/FACULTY` can take any value in english, but should not be blank.
-* A `y/YEAR_OF_STUDY` must be a positive integer.
-* A `ep/PERSONAL_EMAIL` or `ew/NUS_WORK_EMAIL` must be of format local-part@domain.
-** The local-part must only contain alphanumeric characters and special characters ( !#$%&'*+/=?`{|}~^.- ), excluding the parenthesis.
-** The domain name must at least be 2 characters long, start and end with alphanumeric characters and consist of alphanumeric characters, with a period or a hyphen for the characters in-between, if any.
-* A `d/DEPARTMENT` can take any value in english, but should not be blank.
-* A `t/TAG` must only be alphanumeric and one word, i.e `t/catLover` is correct while `t/cat lover` is not.
-* `s/SLOT` must follow the format: `dd/MM/yyyy HH:mm-HH:mm`, where *dd/MM/yyyy* refers to a *date*, the leftmost *HH:mm* refers to the *start duration*
-and the rightmost *HH:mm* refers to the *end duration*.
-* The date *dd/MM/yyyy* must strictly be a valid date, i.e 30/02/2019  cannot be supplied as a date.
-* The duration of a `s/SLOT` must follow these constraints:
-** A duration must be in 24-hour format.
-** The range of durations available for input must be within <<Working Hours, Working Hours>>.
-** The start duration must be earlier than the end duration, and be in increments of `duration`.
-The time elapsed from the start duration to end duration must also follow the number of minutes as specified
-by the value of `duration` in <<User Preferences, User Preferences>>. See <<Duration of Time slot, Duration of Time slot>> for more details.
-
-====
-
-==== Adding a new interviewer
-Manually add a new interviewer to the database.
-
-Format: `add r/interviewer n/NAME p/PHONE ew/NUS_WORK_EMAIL d/DEPARTMENT  s/SLOT... [t/TAG]...`
-
-Example:
-
- add r/interviewer n/Mary Jane p/98765432 ew/mary_jane@u.nus.edu d/Marketing s/20/09/2019 18:00-18:30
-
-====
-Constraints:
-
-* A `n/NAME` must only contain alphanumeric characters and spaces, and should not be blank.
-* A `p/PHONE` must only contain numbers, and should be at least 3 digits long.
-* A `ew/NUS_WORK_EMAIL` must be of format local-part@domain.
-** The local-part must only contain alphanumeric characters and special characters ( !#$%&'*+/=?`{|}~^.- ), excluding the parenthesis.
-** The domain name must at least be 2 characters long, start and end with alphanumeric characters and consist of alphanumeric characters, with a period or a hyphen for the characters in-between, if any.
-* A `d/DEPARTMENT` can take any value in english, but should not be blank.
-* A `t/TAG` must only be alphanumeric and one word, i.e `t/catLover` is correct while `t/cat lover` is not.
-* `s/SLOT` must follow the format: `dd/MM/yyyy HH:mm-HH:mm`, where *dd/MM/yyyy* refers to a *date*, the leftmost *HH:mm* refers to the *start duration*
-and the rightmost *HH:mm* refers to the *end duration*.
-* The date *dd/MM/yyyy* must strictly be a valid date, i.e 30/02/2019  cannot be supplied as a date.
-* The duration of a `s/SLOT` must follow these constraints:
-** A duration must be in 24-hour format.
-** The range of durations available for input must be within <<Working Hours, Working Hours>>.
-** The start duration must be earlier than the end duration, and be in increments of `duration`.
-The time elapsed from the start duration to end duration must also follow the number of minutes as specified
-by the value of `duration` in <<User Preferences, User Preferences>>. See <<Duration of Time slot, Duration of Time slot>> for more details.
-
-====
-
-// end::add[]
-
-// tag::edit[]
-
-=== Edit interviewees/interviewers manually `edit`
-Manually edit an entity in the database. The command format depends on the `r/ROLE` prefix supplied:
-
-* If `interviewee` is supplied, refer to <<Edit an existing interviewee, Edit an existing interviewee>> below.
-* If `interviewer` is supplied, refer to <<Edit an existing interviewer, Edit an existing interviewer>> below.
-
-==== Edit an existing interviewee
-Manually edit an existing interviewee in the database.
-
-Format: `edit NAME r/interviewee [p/PHONE] [f/FACULTY] [y/YEAR_OF_STUDY] [ep/PERSONAL_EMAIL] [ew/NUS_WORK_EMAIL]
-[d/DEPARTMENT]... [s/SLOT]... [t/TAG]...`
-
-Notes:
-
-* An empty tag prefix `t/` can be supplied to reset the tags of an interviewee.
-* If a department prefix `d/` is supplied, at least one valid, non-empty department must be provided.
-* If a slot prefix `s/` is supplied, at least one valid, non-empty slot must be provided.
-
-Example:
-
- edit John Doe r/interviewee p/91234567 f/School of Computing s/05/11/2019 18:00-19:00
-
-====
-Constraints:
-
-* The interviewee to be edited must exist in the Scheduler.
-* `NAME` must be provided after `edit` and before the first prefix `r/ROLE`.
-* At least one optional argument must be supplied, i.e `edit NAME r/interviewee` is not valid input.
-
-* A `n/NAME` must only contain alphanumeric characters and spaces, and should not be blank.
-* A `p/PHONE` must only contain numbers, and should be at least 3 digits long.
-* A `f/FACULTY` can take any value in english, but should not be blank.
-* A `y/YEAR_OF_STUDY` must be a positive integer.
-* A `ep/PERSONAL_EMAIL` or `ew/NUS_WORK_EMAIL` must be of format local-part@domain.
-** The local-part must only contain alphanumeric characters and special characters ( !#$%&'*+/=?`{|}~^.- ), excluding the parenthesis.
-** The domain name must at least be 2 characters long, start and end with alphanumeric characters and consist of alphanumeric characters, with a period or a hyphen for the characters in-between, if any.
-* A `d/DEPARTMENT` can take any value in english, but should not be blank.
-* A `t/TAG` must only be alphanumeric and one word, i.e `t/catLover` is correct while `t/cat lover` is not.
-* `s/SLOT` must follow the format: `dd/MM/yyyy HH:mm-HH:mm`, where *dd/MM/yyyy* refers to a *date*, the leftmost *HH:mm* refers to the *start duration*
-and the rightmost *HH:mm* refers to the *end duration*.
-* The date *dd/MM/yyyy* must strictly be a valid date, i.e 30/02/2019  cannot be supplied as a date.
-* The duration of a `s/SLOT` must follow these constraints:
-** A duration must be in 24-hour format.
-** The range of durations available for input must be within <<Working Hours, Working Hours>>.
-** The start duration must be earlier than the end duration, and be in increments of `duration`.
-The time elapsed from the start duration to end duration must also follow the number of minutes as specified
-by the value of `duration` in <<User Preferences, User Preferences>>. See <<Duration of Time slot, Duration of Time slot>> for more details.
-
-====
-
-==== Edit an existing interviewer
-Manually edit an existing interviewer in the database.
-
-Format: `edit NAME r/interviewer [p/PHONE] [t/TAG]... [d/DEPARTMENT] [ew/NUS_WORK_EMAIL] [s/SLOT...]`
-
-Notes:
-
-* An empty tag prefix `t/` can be supplied to reset the tags of an interviewee.
-* If a slot prefix `s/` is supplied, at least one valid, non-empty slot must be provided.
-
-Example:
-
- edit John Doe r/interviewee p/91234567 f/School of Computing s/05/11/2019 18:00-19:00
-
-====
-Constraints:
-
-* The interviewer to be edited must exist in the Scheduler.
-* `NAME` must be provided after `edit` and before the first prefix `r/ROLE`.
-* At least one optional argument must be supplied, i.e `edit NAME r/interviewer` is not valid input.
-
-* A `n/NAME` must only contain alphanumeric characters and spaces, and should not be blank.
-* A `p/PHONE` must only contain numbers, and should be at least 3 digits long.
-* A `ew/NUS_WORK_EMAIL` must be of format local-part@domain.
-** The local-part must only contain alphanumeric characters and special characters ( !#$%&'*+/=?`{|}~^.- ), excluding the parenthesis.
-** The domain name must at least be 2 characters long, start and end with alphanumeric characters and consist of alphanumeric characters, with a period or a hyphen for the characters in-between, if any.
-* A `d/DEPARTMENT` can take any value in english, but should not be blank.
-* A `t/TAG` must only be alphanumeric and one word, i.e `t/catLover` is correct while `t/cat lover` is not.
-* `s/SLOT` must follow the format: `dd/MM/yyyy HH:mm-HH:mm`, where *dd/MM/yyyy* refers to a *date*, the leftmost *HH:mm* refers to the *start duration*
-and the rightmost *HH:mm* refers to the *end duration*.
-* The date *dd/MM/yyyy* must strictly be a valid date, i.e 30/02/2019  cannot be supplied as a date.
-* The duration of a `s/SLOT` must follow these constraints:
-** A duration must be in 24-hour format.
-** The range of durations available for input must be within <<Working Hours, Working Hours>>.
-** The start duration must be earlier than the end duration, and be in increments of `duration`.
-The time elapsed from the start duration to end duration must also follow the number of minutes as specified
-by the value of `duration` in <<User Preferences, User Preferences>>. See <<Duration of Time slot, Duration of Time slot>> for more details.
-
-====
-
-// end::edit[]
-
-// tag::delete[]
-
-=== Delete interviewees/interviewers manually `delete`
-Manually delete an entity from the database.
-
-Format: `delete NAME r/ROLE`
-
-* If `interviewee` is supplied as `ROLE`, refer to <<Delete an existing interviewee, Delete an existing interviewee>>.
-* If `interviewer` is supplied as `ROLE`, refer to <<Delete an existing interviewer, Delete an existing interviewer>>.
-
-==== Delete an existing interviewee
-Deletes the specified interviewee from the database.
-
-Format: `delete NAME r/interviewee`
-
-Example:
-
- delete John Doe r/interviewee
-
-====
-
-Constraints:
-
-* The interviewee with `NAME` must exist in the Scheduler.
-
-====
-
-==== Delete an existing interviewer
-Deletes the specified interviewer from the database.
-
-Format: `delete NAME r/interviewee`
-
-Example:
-
- delete Bohn Doe r/interviewer
-
-====
-
-Constraints:
-
-* The interviewer with `NAME` must exist in the Scheduler.
-
-====
-
-// end::delete[]
-
 === UI Display
 
 ==== Display Schedules
@@ -505,32 +295,6 @@ Constraints:
 * The command must be exactly the same as the format.
 
 ====
-
-==== Differentiating the importance of timetable slots through colours `[Coming in v2.0]`
-To edit time slots and change their colour so to show the importance of that slots.
-There are 3 importance: Low, Medium and High.
-
-Format: `change s/SLOT IMPORTANCE`
-
-Example: `change s/17/10/2019 13:00-14:00 medium`
-
-=== Get interview schedule `get` `[Coming in v2.0]`
-Find an interviewer/interviewee and display his/her interview schedule.
-
-Format: `get NAME`
-
-Example:
-
- get "John Doe"
-
-=== Tag interview slot `tag` `[Coming in v2.0]`
-Tags an interview slot with a name.
-
-Format: `tag TAG_NAME`
-
-User will also be able to filter by tags.
-
-Format: `filter tag TAG_NAME`
 
 === Scheduling `schedule`
 ==== Schedule the interviews
@@ -592,6 +356,267 @@ Notes:
 Provides a summary report of the number of interviewees with emails sent and the total number of interviewees stored in the database.
 
 Format: `email ct/status`
+
+// tag::add_interviewee[]
+
+=== Add interviewees/interviewers manually `add`
+Manually add a new entity to the database. The command format differs on the `r/ROLE` prefix supplied:
+
+* If `interviewee` is supplied, refer to <<Adding a new interviewee, Adding a new interviewee>> below.
+* If `interviewer` is supplied, refer to <<Adding a new interviewer, Adding a new interviewer>> below.
+
+==== Adding a new interviewee
+Manually add a new interviewee to the database.
+
+Format: `add r/interviewee n/NAME p/PHONE f/FACULTY y/YEAR_OF_STUDY ep/PERSONAL_EMAIL ew/NUS_WORK_EMAIL d/DEPARTMENT... s/SLOT... [t/TAG]...`
+
+Example:
+
+ add r/interviewee n/John Doe p/88888888 t/CAP5 t/dogLover f/School of Computing ep/JohnDoe@gmail.com ew/JohnDoe@u.nus.edu y/2018 d/Marketing s/20/09/2019 18:00-18:30
+
+// end::add_interviewee[]
+
+// tag::add_constraints[]
+
+====
+Constraints:
+
+* A `n/NAME` must only contain alphanumeric characters and spaces, and should not be blank.
+* A `p/PHONE` must only contain numbers, and should be at least 3 digits long.
+* A `f/FACULTY` can take any value in english, but should not be blank.
+* A `y/YEAR_OF_STUDY` must be a positive integer.
+* A `ep/PERSONAL_EMAIL` or `ew/NUS_WORK_EMAIL` must be of format local-part@domain.
+** The local-part must only contain alphanumeric characters and special characters ( !#$%&'*+/=?`{|}~^.- ), excluding the parenthesis.
+** The domain name must at least be 2 characters long, start and end with alphanumeric characters and consist of alphanumeric characters, with a period or a hyphen for the characters in-between, if any.
+* A `d/DEPARTMENT` can take any value in english, but should not be blank.
+* A `t/TAG` must only be alphanumeric and one word, i.e `t/catLover` is correct while `t/cat lover` is not.
+* `s/SLOT` must follow the format: `dd/MM/yyyy HH:mm-HH:mm`, where *dd/MM/yyyy* refers to a *date*, the leftmost *HH:mm* refers to the *start duration*
+and the rightmost *HH:mm* refers to the *end duration*.
+* The date *dd/MM/yyyy* must strictly be a valid date, i.e 30/02/2019  cannot be supplied as a date.
+* The duration of a `s/SLOT` must follow these constraints:
+** A duration must be in 24-hour format.
+** The range of durations available for input must be within <<Working Hours, Working Hours>>.
+** The start duration must be earlier than the end duration, and be in increments of `duration`.
+The time elapsed from the start duration to end duration must also follow the number of minutes as specified
+by the value of `duration` in <<User Preferences, User Preferences>>. See <<Duration of Time slot, Duration of Time slot>> for more details.
+
+====
+
+// end::add_constraints[]
+
+// tag::add_interviewer[]
+
+==== Adding a new interviewer
+Manually add a new interviewer to the database.
+
+Format: `add r/interviewer n/NAME p/PHONE ew/NUS_WORK_EMAIL d/DEPARTMENT  s/SLOT... [t/TAG]...`
+
+Example:
+
+ add r/interviewer n/Mary Jane p/98765432 ew/mary_jane@u.nus.edu d/Marketing s/20/09/2019 18:00-18:30
+
+// end::add_interviewer[]
+
+====
+Constraints:
+
+* A `n/NAME` must only contain alphanumeric characters and spaces, and should not be blank.
+* A `p/PHONE` must only contain numbers, and should be at least 3 digits long.
+* A `ew/NUS_WORK_EMAIL` must be of format local-part@domain.
+** The local-part must only contain alphanumeric characters and special characters ( !#$%&'*+/=?`{|}~^.- ), excluding the parenthesis.
+** The domain name must at least be 2 characters long, start and end with alphanumeric characters and consist of alphanumeric characters, with a period or a hyphen for the characters in-between, if any.
+* A `d/DEPARTMENT` can take any value in english, but should not be blank.
+* A `t/TAG` must only be alphanumeric and one word, i.e `t/catLover` is correct while `t/cat lover` is not.
+* `s/SLOT` must follow the format: `dd/MM/yyyy HH:mm-HH:mm`, where *dd/MM/yyyy* refers to a *date*, the leftmost *HH:mm* refers to the *start duration*
+and the rightmost *HH:mm* refers to the *end duration*.
+* The date *dd/MM/yyyy* must strictly be a valid date, i.e 30/02/2019  cannot be supplied as a date.
+* The duration of a `s/SLOT` must follow these constraints:
+** A duration must be in 24-hour format.
+** The range of durations available for input must be within <<Working Hours, Working Hours>>.
+** The start duration must be earlier than the end duration, and be in increments of `duration`.
+The time elapsed from the start duration to end duration must also follow the number of minutes as specified
+by the value of `duration` in <<User Preferences, User Preferences>>. See <<Duration of Time slot, Duration of Time slot>> for more details.
+
+====
+
+// tag::edit_interviewee[]
+
+=== Edit interviewees/interviewers manually `edit`
+Manually edit an entity in the database. The command format depends on the `r/ROLE` prefix supplied:
+
+* If `interviewee` is supplied, refer to <<Edit an existing interviewee, Edit an existing interviewee>> below.
+* If `interviewer` is supplied, refer to <<Edit an existing interviewer, Edit an existing interviewer>> below.
+
+==== Edit an existing interviewee
+Manually edit an existing interviewee in the database.
+
+Format: `edit NAME r/interviewee [p/PHONE] [f/FACULTY] [y/YEAR_OF_STUDY] [ep/PERSONAL_EMAIL] [ew/NUS_WORK_EMAIL]
+[d/DEPARTMENT]... [s/SLOT]... [t/TAG]...`
+
+Notes:
+
+* An empty tag prefix `t/` can be supplied to reset the tags of an interviewee.
+* If a department prefix `d/` is supplied, at least one valid, non-empty department must be provided.
+* If a slot prefix `s/` is supplied, at least one valid, non-empty slot must be provided.
+
+Example:
+
+ edit John Doe r/interviewee p/91234567 f/School of Computing s/05/11/2019 18:00-19:00
+
+// end::edit_interviewee[]
+
+====
+Constraints:
+
+* The interviewee to be edited must exist in the Scheduler.
+* `NAME` must be provided after `edit` and before the first prefix `r/ROLE`.
+* At least one optional argument must be supplied, i.e `edit NAME r/interviewee` is not valid input.
+
+* A `n/NAME` must only contain alphanumeric characters and spaces, and should not be blank.
+* A `p/PHONE` must only contain numbers, and should be at least 3 digits long.
+* A `f/FACULTY` can take any value in english, but should not be blank.
+* A `y/YEAR_OF_STUDY` must be a positive integer.
+* A `ep/PERSONAL_EMAIL` or `ew/NUS_WORK_EMAIL` must be of format local-part@domain.
+** The local-part must only contain alphanumeric characters and special characters ( !#$%&'*+/=?`{|}~^.- ), excluding the parenthesis.
+** The domain name must at least be 2 characters long, start and end with alphanumeric characters and consist of alphanumeric characters, with a period or a hyphen for the characters in-between, if any.
+* A `d/DEPARTMENT` can take any value in english, but should not be blank.
+* A `t/TAG` must only be alphanumeric and one word, i.e `t/catLover` is correct while `t/cat lover` is not.
+* `s/SLOT` must follow the format: `dd/MM/yyyy HH:mm-HH:mm`, where *dd/MM/yyyy* refers to a *date*, the leftmost *HH:mm* refers to the *start duration*
+and the rightmost *HH:mm* refers to the *end duration*.
+* The date *dd/MM/yyyy* must strictly be a valid date, i.e 30/02/2019  cannot be supplied as a date.
+* The duration of a `s/SLOT` must follow these constraints:
+** A duration must be in 24-hour format.
+** The range of durations available for input must be within <<Working Hours, Working Hours>>.
+** The start duration must be earlier than the end duration, and be in increments of `duration`.
+The time elapsed from the start duration to end duration must also follow the number of minutes as specified
+by the value of `duration` in <<User Preferences, User Preferences>>. See <<Duration of Time slot, Duration of Time slot>> for more details.
+
+====
+
+// tag::edit_interviewer[]
+
+==== Edit an existing interviewer
+Manually edit an existing interviewer in the database.
+
+Format: `edit NAME r/interviewer [p/PHONE] [t/TAG]... [d/DEPARTMENT] [ew/NUS_WORK_EMAIL] [s/SLOT...]`
+
+Notes:
+
+* An empty tag prefix `t/` can be supplied to reset the tags of an interviewee.
+* If a slot prefix `s/` is supplied, at least one valid, non-empty slot must be provided.
+
+Example:
+
+ edit John Doe r/interviewee p/91234567 f/School of Computing s/05/11/2019 18:00-19:00
+
+// end::edit_interviewer[]
+
+====
+Constraints:
+
+* The interviewer to be edited must exist in the Scheduler.
+* `NAME` must be provided after `edit` and before the first prefix `r/ROLE`.
+* At least one optional argument must be supplied, i.e `edit NAME r/interviewer` is not valid input.
+
+* A `n/NAME` must only contain alphanumeric characters and spaces, and should not be blank.
+* A `p/PHONE` must only contain numbers, and should be at least 3 digits long.
+* A `ew/NUS_WORK_EMAIL` must be of format local-part@domain.
+** The local-part must only contain alphanumeric characters and special characters ( !#$%&'*+/=?`{|}~^.- ), excluding the parenthesis.
+** The domain name must at least be 2 characters long, start and end with alphanumeric characters and consist of alphanumeric characters, with a period or a hyphen for the characters in-between, if any.
+* A `d/DEPARTMENT` can take any value in english, but should not be blank.
+* A `t/TAG` must only be alphanumeric and one word, i.e `t/catLover` is correct while `t/cat lover` is not.
+* `s/SLOT` must follow the format: `dd/MM/yyyy HH:mm-HH:mm`, where *dd/MM/yyyy* refers to a *date*, the leftmost *HH:mm* refers to the *start duration*
+and the rightmost *HH:mm* refers to the *end duration*.
+* The date *dd/MM/yyyy* must strictly be a valid date, i.e 30/02/2019  cannot be supplied as a date.
+* The duration of a `s/SLOT` must follow these constraints:
+** A duration must be in 24-hour format.
+** The range of durations available for input must be within <<Working Hours, Working Hours>>.
+** The start duration must be earlier than the end duration, and be in increments of `duration`.
+The time elapsed from the start duration to end duration must also follow the number of minutes as specified
+by the value of `duration` in <<User Preferences, User Preferences>>. See <<Duration of Time slot, Duration of Time slot>> for more details.
+
+====
+
+// tag::delete[]
+
+=== Delete interviewees/interviewers manually `delete`
+Manually delete an entity from the database.
+
+Format: `delete NAME r/ROLE`
+
+* If `interviewee` is supplied as `ROLE`, refer to <<Delete an existing interviewee, Delete an existing interviewee>>.
+* If `interviewer` is supplied as `ROLE`, refer to <<Delete an existing interviewer, Delete an existing interviewer>>.
+
+==== Delete an existing interviewee
+Deletes the specified interviewee from the database.
+
+Format: `delete NAME r/interviewee`
+
+Example:
+
+ delete John Doe r/interviewee
+
+====
+
+Constraints:
+
+* The interviewee with `NAME` must exist in the Scheduler.
+
+====
+
+==== Delete an existing interviewer
+Deletes the specified interviewer from the database.
+
+Format: `delete NAME r/interviewee`
+
+Example:
+
+ delete Bohn Doe r/interviewer
+
+====
+
+Constraints:
+
+* The interviewer with `NAME` must exist in the Scheduler.
+
+====
+
+// end::delete[]
+
+// tag::clear[]
+
+=== Clear all interviewees/interviewers `clear`
+Clears all interviewees, interviewers and schedules from Scheduler.
+
+Format: `clear`
+
+// end::clear[]
+
+==== Differentiating the importance of timetable slots through colours `[Coming in v2.0]`
+To edit time slots and change their colour so to show the importance of that slots.
+There are 3 importance: Low, Medium and High.
+
+Format: `change s/SLOT IMPORTANCE`
+
+Example: `change s/17/10/2019 13:00-14:00 medium`
+
+=== Get interview schedule `get` `[Coming in v2.0]`
+Find an interviewer/interviewee and display his/her interview schedule.
+
+Format: `get NAME`
+
+Example:
+
+ get "John Doe"
+
+=== Tag interview slot `tag` `[Coming in v2.0]`
+Tags an interview slot with a name.
+
+Format: `tag TAG_NAME`
+
+User will also be able to filter by tags.
+
+Format: `filter tag TAG_NAME`
 
 ==== Sending of interview results to an interviewee `[Coming in v2.0]`
 Opens an email dialog containing the interviewee’s result/interview outcome and other details that you might want to include.
