--- a/docs/team/kzrthikz.adoc
+++ b/docs/team/kzrthikz.adoc
@@ -73,7 +73,7 @@ https://github.com/AY1920S1-CS2103T-W13-1/main/pull/40[#40])
 
 |===
 |_Given below are sections I contributed to the User Guide.
-They showcase my ability to write documentation targeting end-users.
+They showcase my ability to write documentation targeting end-users._
 |===
 
 include::../UserGuide.adoc[tag=deadline]
