--- a/docs/team/lyskevin.adoc
+++ b/docs/team/lyskevin.adoc
@@ -20,7 +20,7 @@ image:appveyor-logo.png[width="50", height="50"]
 image:github-logo.png[width="50", height="60"]
 image:javafx-logo.png[width="80"]
 image:coveralls-logo.png[width="80"]
-image:codacy-logo.png[width="100", height="100"]
+image:codacy-logo.png[width="100"]
 
 ====
 
